# event_camera

./: CMakeLists.txt  README.md  main.cpp  text.cpp
include/: IOUtil.h  event.h  filter.h  parameter.h  parameterize.h  region.h
src/: IOUtil.cpp  event.cpp  filter.cpp  parameter.cpp  parameterize.cu  region.cpp
